--- a/pantry-track/app/globals.css
+++ b/pantry-track/app/globals.css
@@ -12,11 +12,14 @@
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
+    --font-inter: 'Inter', sans-serif;
     --background-end-rgb: 0, 0, 0;
   }
+
 }
 
 body {
+  font-family: var(--font-inter);
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
